Fix scrollbar responsive bugs in todoList

--- a/src/styles/tasks-view.scss
+++ b/src/styles/tasks-view.scss
@@ -52,16 +52,6 @@ $line-spacing: 48px;
         height: 0;
         transition: all 0.6s ease;
         position: relative;
-
-        &.grow-items {
-          .todo-item {
-            left: 11px;
-            width: calc(100% - 22px);
-          }
-        }
-
-        .todo-item {
-        }
       }
 
       .list-header.hide + ul.todo-list-time {
